  o Added a Call Tip feature to the edit box, so it shows the function prototype as you type it. (AMZ)
  o Fixed glitches related to the Duration time edit box. (AMZ)
  o Tweaked the behavior of the margin boxes, now they no longer show padding zeros. (AMZ)
  o Actor and Effect fields now show a "ghosted" caption saying their name when they are not focused on and blank. (AMZ)
- Changes to Fonts Collector:
  o Changed the font searching engine to something slower, but far more reliable. (jfs/AMZ)
  o Added option to just verify if you have the fonts. (AMZ)
  o You can now collect fonts directly to a zipped archive. (AMZ)
  o Fixed behavior of the Escape key in it. (AMZ)
  o Redesigned the interface and replaced the log window with a much better Scintilla control. (AMZ)
  o You can now collect multiple times without reopening the dialog. (AMZ)
- All user-specific files (configuration, style storages, etc) are now stored on Application Data\Aegisub in Windows. (AMZ)
- config.dat can optionally be stored on the same folder as aegisub.exe. (AMZ)
- Added a much-needed options dialog with all the relevant config.dat options in it. (AMZ)
- Various fixes to better handle paths/file names with non-ANSI characters on Windows (jfs/AMZ)
- Misc. fixes for building on Linux (Azzy, equinox, jfs)
- Added an option to automatically save the files whenever you change anything. (AMZ)
- Added global hotkey for Video Play (default Ctrl+P). (AMZ)
- Commiting changes in audio to the last line will insert a new line after it. (AMZ)
- Added two options that allows you to specify where to keep the audio cache. (AMZ)
- Improved Splash Screen behavior to show up even if the program is frozen loading subtitles, and to center on the current display. (AMZ)
- Aegisub now remembers if it was maximized when it was last quit, and restores its state when opening again. (AMZ)
- A few minor fixes to the Find dialogue regarding initial focus and the behavior of the Escape key. (AMZ)